2010-05-28  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Provisioning profile entitlement
	  values should overwrite template values.

2010-05-25  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneDeviceConsole.cs: Dialog placement.

2010-05-25  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehindGenerator.cs: Build a map of obj-c types to
	  MonoTouch types by reflection, instead of hardcoding certain
	  namespaces.

2010-05-25  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.csproj:
	* MonoDevelop.IPhone.addin.xml:
	* Templates/IPhoneEntitlements.xft.xml: Remove the
	  entitlements plist template now we have a generic plist
	  template.

	* Templates/IPhonePList.xft.xml: Fix template name.

2010-05-25  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.csproj:
	* MonoDevelop.IPhone.addin.xml:
	* Templates/IPhonePList.xft.xml:
	* Templates/IPhoneApplicationPList.xft.xml: Change application
	  plist template into a generic plist template.

2010-05-25  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Bug 608161 - [REGRESSION]
	  MonoDevelop no long allows nibless projects to build.

	* gtk-gui/gui.stetic: Flush.

2010-05-21  Michael Hutchinson  <mhutchinson@novell.com>

	* Templates/IPhoneUtilityProject.xpt.xml:
	* Templates/IPhoneNavBasedProject.xpt.xml:
	* Templates/IPhoneWindowBasedProject.xpt.xml: Fix MainNibFile
	  xib/nib value in the templates.

2010-05-22  Geoff Norton  <gnorton@novell.com>

	* IPhoneSettings.cs: Simulator should still use Loopback

2010-05-17  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneProject.cs: Fix enum flags issue.

2010-05-14  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneExecutionHandler.cs: Added the ability not to show the
	  'start app on device' message again.

	* Keychain.cs:
	* IPhoneSettings.cs:
	* IPhoneBuildExtension.cs:
	* MonoDevelop.IPhone.csproj: Moved settings to a static class.
